[package]
name = "udt-rs"
version = "0.1.0"
authors = ["Hieu Nguyen <nthieu173@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["udt-sys/vendored"]

[dependencies]
udt-sys = { git = "https://github.com/nthieu173/udt-sys.git" }
libc = "0.2"
futures = "0.3"

os_socketaddr = { git = "https://github.com/nthieu173/os_socketaddr.git", branch = "kozuka-add_support_windows" }

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winsock2", "ws2def"] }